# InventoryManager

./: .gitignore  README.md  pyproject.toml
InventoryManager/: build.sh  requirements.txt  vercel.json
InventoryManager/InvApp/: forms.py  models.py  urls.py  views.py
InventoryManager/InvApp/migrations/: 0001_initial.py  0002_brand_remove_product_product_id_and_more.py  0003_alter_brand_name.py
InventoryManager/InvApp/static/InvApp/css/: style.css
InventoryManager/InvApp/templates/InvApp/: base.html  confirmDelete.html  createBrand.html  createProduct.html  home.html
InventoryManager/Main/: settings.py  urls.py  wsgi.py
